remotely/tests/ui/fail/missing_namespace.rs
use remotely::zod;

#[derive(zod)]
struct Test(usize);

fn main() {}
